# zephyr

./: .gitignore  .travis.yaml  .travis.yml  ChangeLog.md  LICENSE  Makefile  QuickCheck-2.12.1.nix  README.md  appveyor.yml  cabal.project  cabal.project.ci  cabal.project.freeze  default.nix  ghcid  nixpkgs.json  pkg.nix  shell.nix  stack.yaml  zephyr.cabal
.github/workflows/: ci.yml  posix.yml  release.yml  test.yml  windows.yml
app/: Main.hs
app/Command/: DCE.hs  DCEOptions.hs  Options.hs  Run.hs
bundle/: build.sh
nix/: language-javascript.nix  nixpkgs.nix  purescript  purescript-0.12.0.nix  purescript-0.12.2.nix  purescript.nix  spdx.nix
src/Language/PureScript/: DCE.hs
src/Language/PureScript/DCE/: Case.hs  Constants.hs  CoreFn.hs  Errors.hs  Eval.hs  Foreign.hs  Instances.hs  Options.hs  TypeClassInstances.hs  Utils.hs
stack-to-nix/: pkgs.nix  zephyr.nix
test/: Generators.hs  Main.hs  TestDCE.hs  TestDCECase.hs  TestDCECoreFn.hs  TestDCEEval.hs
test/Test/: CoreFn.hs  CoreLib.hs  Eval.hs  Generators.hs  Karma.hs  Lib.hs  Utils.hs
test/lib-tests/: bower.json  package.json  packages.dhall  spago.dhall
test/lib-tests/src/: Eval.purs  Foreign.js  Foreign.purs  Literals.purs  Reexp.purs
test/tests/: bower.json
test/tests/src/: Eval.purs  Foreign.js  UnsafeCoerceTest.purs
