name:                zephyr
version:             0.2.0
synopsis:           
  Zephyr tree shaking for PureScript Language
description:
  Tree shaking tool and partial evaluator for PureScript
  CoreFn AST.
homepage:            https://github.com/coot/zephyr#readme
license:             MPL-2.0
license-file:        LICENSE
author:              Marcin Szamotulski <profunctor@pm.me>
maintainer:          Marcin Szamotulski <profunctor@pm.me>
copyright:           (c) 2017-2018 Marcin Szamotulski
build-type:          Simple
extra-source-files:  README.md
category:            Development
cabal-version:       >=1.10
tested-with:         ghc

flag test-with-cabal
  description: use `cabal exec zephyr` in tests
  manual: True
  default: False

library
  hs-source-dirs:      src
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveFunctor
    EmptyDataDecls
    FlexibleContexts
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NamedFieldPuns
    OverloadedStrings
    PatternGuards
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    ViewPatterns
  ghc-options:
      -Wall
      -fmax-pmcheck-iterations=4000000
  exposed-modules:
      Language.PureScript.DCE
    , Language.PureScript.DCE.Constants
    , Language.PureScript.DCE.CoreFn
    , Language.PureScript.DCE.Foreign
    , Language.PureScript.DCE.Errors
    , Language.PureScript.DCE.Eval
    , Language.PureScript.DCE.Utils
  build-depends:      
      aeson >=1.0 && <1.3
    , ansi-terminal >=0.7.1 && <0.9
    , base >= 4.8 && < 4.11
    , base-compat >=0.6.0
    , bytestring
    , boxes >=0.1.4 && <0.2.0
    , containers
    , directory >=1.2.3
    , filepath
    , formatting
    , Glob >=0.9 && <0.10
    , language-javascript >=0.6.0.11 && <0.7
    , mtl >=2.1.0 && <2.3.0
    , optparse-applicative >=0.13.0
    , purescript
    , safe >=0.3.14 && <0.4
    , text
    , transformers >=0.3.0 && <0.6
    , transformers-base >=0.4.0 && <0.5
    , transformers-compat >=0.3.0
    , utf8-string >=1 && <2
  default-language:    Haskell2010

executable zephyr
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    Command.DCE
    Command.DCEOptions
    Paths_zephyr
  default-extensions:
    DataKinds
    FlexibleContexts
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
  ghc-options:
    -Wall
    -O2
    -fno-warn-unused-do-bind
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      aeson >=1.0 && <1.3
    , ansi-terminal >=0.7.1 && <0.9
    , ansi-wl-pprint
    , base
    , base-compat >=0.6.0
    , bytestring
    , containers
    , directory >=1.2.3
    , filepath
    , formatting
    , Glob >=0.9 && <0.10
    , language-javascript >=0.6.0.11 && <0.7
    , mtl >=2.1.0 && <2.3.0
    , optparse-applicative >=0.13.0
    , purescript >= 0.12 && < 0.13
    , text
    , transformers >=0.3.0 && <0.6
    , transformers-base >=0.4.0 && <0.5
    , transformers-compat >=0.3.0
    , utf8-string >=1 && <2
    , zephyr
  default-language:    Haskell2010

test-suite zephyr-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions:
    DataKinds
    DoAndIfThenElse
    FlexibleInstances
    OverloadedStrings
    RecordWildCards
    TupleSections
  main-is: Main.hs
  build-depends:      
      aeson >=1.0 && <1.3
    , ansi-terminal >=0.7.1 && < 0.9
    , base >= 4.8 && < 4.11
    , base-compat >=0.6.0
    , bytestring
    , containers
    , directory >=1.2.3
    , filepath
    , hspec
    , hspec-core
    , HUnit
    , language-javascript >=0.6.0.11 && <0.7
    , mtl >=2.1.0 && <2.3.0
    , optparse-applicative >=0.13.0
    , process < 1.7.0.0
    , purescript
    , QuickCheck >= 2.12.1
    , text
    , transformers >=0.3.0 && <0.6
    , transformers-base >=0.4.0 && <0.5
    , transformers-compat >=0.3.0
    , utf8-string >=1 && <2
    , zephyr
  other-modules:
      TestDCECoreFn
    , TestDCEEval
    , Generators
  if flag(test-with-cabal)
    cpp-options:
      -DTEST_WITH_CABAL=1
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/coot/zephyr
