cabal-version:       2.0
version:             0.3.2
name:                zephyr
synopsis:
  Zephyr, tree-shaking for the PureScript language
description:
  Tree shaking tool and partial evaluator for PureScript
  CoreFn AST.
homepage:            https://github.com/coot/zephyr#readme
license:             MPL-2.0
license-file:        LICENSE
author:              Marcin Szamotulski <profunctor@pm.me>
maintainer:          Marcin Szamotulski <profunctor@pm.me>
copyright:           (c) 2017-2018 Marcin Szamotulski
build-type:          Simple
extra-source-files: 
  ChangeLog.md
  README.md
category:            Development
tested-with:         GHC==8.10.7

flag test-with-stack
  description: use `stack exec zephyr` in tests
  manual:  False
  default: False

flag test-core-libs
  description: test core libs
  manual:  False
  default: False

library
  hs-source-dirs:      src
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveFunctor
    EmptyDataDecls
    FlexibleContexts
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NamedFieldPuns
    OverloadedStrings
    PatternGuards
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    TupleSections
    ViewPatterns
  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wpartial-fields
      -Wredundant-constraints
  exposed-modules:
      Language.PureScript.DCE
    , Language.PureScript.DCE.Constants
    , Language.PureScript.DCE.CoreFn
    , Language.PureScript.DCE.Foreign
    , Language.PureScript.DCE.Errors
    , Language.PureScript.DCE.Eval
    , Language.PureScript.DCE.Utils
  build-depends:
      aeson               >=1.0      && <1.6
    , ansi-terminal       >=0.7.1    && <0.12
    , base                >=4.8      && <5
    , base-compat         >=0.6.0
    , boxes               ^>=0.1.4
    , containers
    , formatting
    , language-javascript >=0.7.0    && <0.8
    , mtl                 >=2.1.0    && <2.3.0
    , purescript          ^>=0.15.0
    , purescript-cst
    , safe                ^>=0.3.9
    , text
  default-language:    Haskell2010

executable zephyr
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    Command.Run
    Command.Options
    Paths_zephyr
  autogen-modules:
    Paths_zephyr
  default-extensions:
    DataKinds
    FlexibleContexts
    NamedFieldPuns
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fno-warn-unused-do-bind
    -threaded
    -rtsopts
    -with-rtsopts -N2
  build-depends:
      aeson
    , async
    , ansi-terminal
    , ansi-wl-pprint
    , base
    , bytestring
    , containers
    , directory            >=1.2.3
    , filepath
    , formatting
    , Glob                 >=0.9      && <0.11
    , language-javascript
    , mtl                  >=2.1.0    && <2.3.0
    , optparse-applicative ==0.16.1.0
    , purescript           ^>=0.15.0
    , purescript-cst
    , text
    , transformers         >=0.3.0    && <0.6
    , utf8-string          >=1        && <2
    , zephyr
  default-language:    Haskell2010

test-suite zephyr-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions:
    DataKinds
    DoAndIfThenElse
    FlexibleInstances
    NamedFieldPuns
    OverloadedStrings
    TupleSections
  main-is: Main.hs
  other-modules:
      Test.CoreFn
    , Test.Eval
    , Test.Generators
    , Test.Lib
    , Test.CoreLib
    , Test.Karma
    , Test.Utils
  build-depends:
      aeson
    , base                 >=4.8      && <5
    , base-compat          >=0.6.0
    , containers
    , directory            >=1.2.3
    , hspec
    , hspec-core
    , HUnit
    , language-javascript
    , mtl                  >=2.1.0    && <2.3.0
    , optparse-applicative ==0.16.1.0
    , process
    , purescript           ^>=0.15
    , purescript-cst
    , QuickCheck           >=2.12.1
    , text
    , transformers         >=0.3.0    && <0.6
    , utf8-string          >=1        && <2
    , zephyr
  build-tool-depends:
      purescript:purs
  if flag(test-with-stack)
    cpp-options:
      -DTEST_WITH_STACK=1
  if flag(test-core-libs)
    cpp-options:
      -DTEST_CORE_LIBS=1
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -threaded
    -rtsopts
    -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/working-group-purescript-es/zephyr
