cabal-version:       2.0
version:             0.5.3
name:                zephyr
synopsis:
  Zephyr, tree-shaking for the PureScript language
description:
  Tree shaking tool and partial evaluator for PureScript
  CoreFn AST.
homepage:            https://github.com/MaybeJustJames/zephyr#readme
license:             MPL-2.0
license-file:        LICENSE
author:              Marcin Szamotulski <profunctor@pm.me>
maintainer:          James Collier <jhc_at_home@proton.me>
copyright:           (c) 2017-2021 Marcin Szamotulski, (c) 2022-2023 James Collier
build-type:          Simple
extra-source-files: 
  ChangeLog.md
  README.md
category:            Development
tested-with:         GHC==9.2.7

flag test-with-stack
  description: use `stack exec zephyr` in tests
  manual:  False
  default: False

flag test-core-libs
  description: test core libs
  manual:  False
  default: False

library
  hs-source-dirs:      src
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveFunctor
    EmptyDataDecls
    FlexibleContexts
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternGuards
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    TupleSections
    ViewPatterns
  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wpartial-fields
      -Wredundant-constraints
  exposed-modules:
      Language.PureScript.DCE
    , Language.PureScript.DCE.Constants
    , Language.PureScript.DCE.CoreFn
    , Language.PureScript.DCE.Foreign
    , Language.PureScript.DCE.Errors
    , Language.PureScript.DCE.Eval
    , Language.PureScript.DCE.Utils
  build-depends:
      aeson                >=2.0.3.0  && <2.1
    , ansi-terminal        >=0.11     && <0.12
    , base                 >=4.16.2   && <4.17
    , boxes                >=0.1.5    && <0.2
    , containers           >=0.6.5.1  && <0.7
    , formatting
    , language-javascript  ==0.7.0.0
    , mtl                  >=2.2.2    && <2.3
    , purescript           >=0.15.4   && <0.16
    , safe                 >=0.3.19   && <0.4
    , text                 >=1.2.5.0  && <1.3
    , unordered-containers == 0.2.19.1
  default-language:    Haskell2010

executable zephyr
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    Command.Run
    Command.Options
    Paths_zephyr
  autogen-modules:
    Paths_zephyr
  default-extensions:
    DataKinds
    FlexibleContexts
    NamedFieldPuns
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fno-warn-unused-do-bind
    -threaded
    -rtsopts
    -with-rtsopts -N2
  build-depends:
      aeson                >=2.0.3.0   && <2.1
    , async
    , ansi-terminal        >=0.11      && <0.12
    , ansi-wl-pprint       >=0.6.9     && <0.7
    , base                 >=4.16.2    && <4.17
    , bytestring           >=0.11.3.1  && <0.12
    , containers           >=0.6.5.1   && <0.7
    , directory            >=1.3.6.2   && <1.4
    , filepath             >=1.4.2.2   && <1.5
    , formatting
    , Glob                 >=0.10.2    && <0.11
    , language-javascript  ==0.7.0.0
    , mtl                  >=2.2.2     && <2.3
    , optparse-applicative >=0.17.0.0  && <0.18
    , purescript           >=0.15.4    && <0.16
    , text                 >=1.2.5.0   && <1.3
    , transformers         >=0.5.6.2   && <0.6
    , utf8-string          >=1.0.2     && <1.1
    , zephyr               >=0.5       && <0.6
  default-language:    Haskell2010

test-suite zephyr-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions:
    DataKinds
    DoAndIfThenElse
    FlexibleInstances
    NamedFieldPuns
    OverloadedStrings
    TupleSections
  main-is: Main.hs
  other-modules:
      Test.CoreFn
    , Test.Eval
    , Test.Generators
    , Test.Lib
    , Test.CoreLib
    , Test.Karma
    , Test.Utils
  build-depends:
      aeson                >=2.0.3.0   && <2.1
    , base                 >=4.16.2    && <4.17
    , containers           >=0.6.5.1   && <0.7
    , directory            >=1.3.6.2   && <1.4
    , hspec
    , hspec-core           <2.9.3
    , HUnit
    , language-javascript  ==0.7.0.0
    , mtl                  >=2.2.2     && <2.3
    , optparse-applicative ==0.17.0.0
    , process              ==1.6.13.1
    , purescript           >=0.15.4    && <0.16
    , QuickCheck           >=2.12.1
    , text                 >=1.2.5.0   && <1.3
    , transformers         >=0.5.6.2   && <0.6
    , zephyr               >=0.5       && <0.6
  build-tool-depends:
      purescript:purs
  if flag(test-with-stack)
    cpp-options:
      -DTEST_WITH_STACK=1
  if flag(test-core-libs)
    cpp-options:
      -DTEST_CORE_LIBS=1
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -threaded
    -rtsopts
    -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MaybeJustJames/zephyr
